test/arrays/deitz/part7/test_error_stride_range.good
test_error_stride_range.chpl:4: error: type mismatch in assignment of ranges with different stridable parameters
